# porfolio-evolution

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/portfolio_evolution/: __init__.py  daily_app.py  tickers.py
