[project]
name = "portfolio-evolution"
version = "0.1.0"
description = "DEGIRO PDF \u2192 portfolio evolution and time-weighted return (TWR) calculator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotly>=5.0.0",
    "pdfplumber>=0.11.0",
    "yfinance>=0.2.50",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_evolution"]

